--- a/JS_Projects/Filterable_List_With_Vanilla_JS/index.html
+++ b/JS_Projects/Filterable_List_With_Vanilla_JS/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
     <title>Filter List</title>
 </head>
+
 <body>
     <div class="container">
         <h1 class="center-align">
@@ -16,17 +20,21 @@
             <!-- <img src="assets/img/logo.png" class="brand-logo" alt=""> -->
             Items
         </h1>
-        <ul class="" style="border: solid 2px; padding: 10px; width: 80vw; margin: auto">
-            <li class="collection-item">
-                It can be used to showcase my whole project library, and search projects using filter function
-            </li>
-            <li class="collection-item">
-                Also categorise the projects based on technology used
-            </li>
-            <li class="collection-item">
-                To categorise images in a website gallery - Photowaalebhaiya
-            </li>
-        </ul>
+        <div style="border: solid 2px; padding: 10px; margin: auto">
+            <p><span style="font-weight: bold;">Languages/ Frameworks Used:</span> HTML, Materialize CSS, JavaScript, FontAwesome, </p>
+            <ul class="" >
+                <li class="collection-item">
+                    It can be used to showcase my whole project library, and search projects using filter function
+                </li>
+                <li class="collection-item">
+                    Also categorise the projects based on technology used
+                </li>
+                <li class="collection-item">
+                    To categorise images in a website gallery - Photowaalebhaiya
+                </li>
+            </ul>
+        </div>
+
         <input type="text" class="text-darken-2" id="filterInput" placeholder="search">
         <ul id="collection" class="collection with-header">
             <li class="collection-header">
@@ -57,10 +65,11 @@
             <li class="collection-item"><a href="#">C Item 5</a></li>
         </ul>
     </div>
-    
+
 
     <script src="main.js">
-        
+
     </script>
 </body>
+
 </html>
